# eclipse-google-testing-frameworkgenerato

./: .classpath  .hgignore  .hgtags  .project  DevelopmentNotes.txt  README.md  build.properties  plugin.xml
src/org/quasar/googletestgenerator/: Activator.java
src/org/quasar/googletestgenerator/cdt/: MethodStub.java
src/org/quasar/googletestgenerator/wizards/: GoogleTestClassWizard.java  NewGoogleTestClassWizardPage.java
test-project/: .cproject  .project  Makefile.am  README  configure  configure.ac
test-project/m4/: cf_have_gtest.m4  cf_tools.m4
test-project/src/: Makefile.am  TestRunner.cpp
